--- a/_posts/2018-01-17-Hello-2018.md
+++ b/_posts/2018-01-17-Hello-2018.md
@@ -1,17 +1,30 @@
 ---
-layout:     post                    # 使用的布局（不需要改）
-title:      My First Post               # 标题 
-subtitle:   Hello World, Hello Blog #副标题
-date:       2018-01-17              # 时间
-author:     Sylar              # 作者
-header-img: img/post-bg-2015.jpg    #这篇文章标题背景图片
-catalog: true                       # 是否归档
-tags:                               #标签
-    - Life
+layout:     post
+title:      Hello 2017
+subtitle:    "\"Hello World, Hello Blog\""
+date:       2017-02-04
+author:     BY
+header-img: img/post-bg-2015.jpg
+catalog: true
+tags:
+    - 生活
 ---
-> Hello World, Hello Blog
 
-## Hey
+> “🙉🙉🙉 ”
 
-这是我的第一篇博客。
+
+## 前言
+
+BY 的 Blog 就这么开通了。
+
+本来打算在年前完成 Blog 的搭建，不曾料想踩了很多坑。。。
+
+[跳过废话，直接看技术实现 ](#build) 
+
+2017 年，BY Blog 总算是搭建好了。
+
+最开始写博客是在[简书](www.jianshu.com)这个平台上，简书确实不错，支持markdown在线编辑。
+
+在一次偶然间，听到我的好基友 **阳阳** 想搭建个人主页，觉得作为一个程序员，是应该倒腾倒腾自己的Blog，于是乎就开始了撸起袖子干了。
+
 
